Use correct titles

--- a/app/rnames_app/templates/wizard_reference_structured_name_edit.html
+++ b/app/rnames_app/templates/wizard_reference_structured_name_edit.html
@@ -1,4 +1,5 @@
 {% extends "wizard_base.html" %}
+{% block title %}RNames - Relation{% endblock %}
 {% block button1 %}
 <div class="w3-teal">
     <!--        <h2>Add Structured Name</h2>-->
