--- a/app/rnames_app/templates/wizard_base.html
+++ b/app/rnames_app/templates/wizard_base.html
@@ -20,8 +20,7 @@
             {% endif %}
         </table>
         {% if wizard.steps.prev %}
-        <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}">first step</button>
-        <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">prev step</button>
+        <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">go back</button>
         {% endif %}
         <input type="submit" value="submit" />
     </form>
