--- a/app/rnames_app/templates/relation_sql_detail.html
+++ b/app/rnames_app/templates/relation_sql_detail.html
@@ -9,7 +9,7 @@
           <a class="btn btn-default" href="{% url 'relation-edit' pk=relation.pk %}"><span class="fa fa-pencil-square-o"></span></a>
           <a class="btn btn-default" href="{% url 'relation-delete' pk=relation.pk %}"><span class="fa  fa-trash-o"></span></a>
         {% endif %}
-        <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
+        <p><button onClick="javascript:history.back();">Go back</button></p>
         <header style="display:none;">
            <h2>RNames - Relation: {{ relation.id }}</h2>
         </header>
