--- a/app/rnames_app/templates/help_instruction.html
+++ b/app/rnames_app/templates/help_instruction.html
@@ -6,7 +6,7 @@
 <article>
    <div class="help">
       <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
-      <header style="display:none;">
+      <header class="w3-hide">
          <h2>RNames - Help - Instructions</h2>
       </header>
       <h2>Stepwise Data Entry</h2>
@@ -59,7 +59,7 @@
           </ol>
         </li>
       </ol>
-      <p style="text-align: center;"><img src="{% static "images/corrschemed.png" %}" alt="" /></p>
+      <p class="w3-center"><img src="{% static "images/corrschemed.png" %}" alt="" /></p>
    </div>
 </article>
 <!-- End of RNames help Database Structure-->
