--- a/app/rnames_app/templates/home.html
+++ b/app/rnames_app/templates/home.html
@@ -5,7 +5,7 @@
   {% load static %}
   <!-- Beginning of homepage content -->
   <section class="w3-content">
-    <header style="display:none;">
+    <header class="w3-hide">
       <h2>RNames - Home</h2>
     </header>
     <div class="w3-teal">
