--- a/app/rnames_app/templates/reference_relation_edit.html
+++ b/app/rnames_app/templates/reference_relation_edit.html
@@ -3,7 +3,7 @@
 {% block script %}
 {% endblock %}
 {% block content %}
-<header style="display:none;">
+<header class="w3-hide">
    <h2>RNames - Reference</h2>
 </header>
 <!-- Write your comments here -->
