--- a/app/rnames_app/templates/relation_sql_detail.html
+++ b/app/rnames_app/templates/relation_sql_detail.html
@@ -10,7 +10,7 @@
           <a class="btn btn-default" href="{% url 'relation-delete' pk=relation.pk %}"><span class="fa  fa-trash-o"></span></a>
         {% endif %}
         <p><button onClick="javascript:history.back();">Go back</button></p>
-        <header style="display:none;">
+        <header class="w3-hide">
            <h2>RNames - Relation: {{ relation.id }}</h2>
         </header>
         <table class="w3-table-all">
@@ -31,7 +31,7 @@
     </div>
     <br>
     {% if references %}
-    <header style="display:none;">
+    <header class="w3-hide">
        <h2>RNames - Relation #{{ relation.id }}: List of References</h2>
     </header>
     <table class="w3-table-all">
