--- a/app/rnames_app/templates/help.html
+++ b/app/rnames_app/templates/help.html
@@ -6,7 +6,7 @@
 <article>
     <div class="help">
         <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
-        <header style="display:none;">
+        <header class="w3-hide">
             <h2>RNames - Help</h2>
          </header>
         <table class="w3-table-all">
