--- a/app/rnames_app/templates/help_database_structure.html
+++ b/app/rnames_app/templates/help_database_structure.html
@@ -7,7 +7,7 @@
   <article>
     <div class="help">
       <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
-      <header style="display:none;">
+      <header class="w3-hide">
         <h2>RNames - Help - Database Structure</h2>
       </header>
       <h2><a name="C4">Database Structure</a></h2>
