--- a/app/rnames_app/templates/help_faq.html
+++ b/app/rnames_app/templates/help_faq.html
@@ -45,7 +45,7 @@
 <article>
     <div class="help">
         <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
-        <header style="display:none;">
+        <header class="w3-hide">
             <h2>RNames - Help - FAQ</h2>
         </header>
         <button class="collapsible">Q: What is a Structured Name?</button>
