Display download duration on the results page

--- a/app/rnames_app/templates/binning_done.html
+++ b/app/rnames_app/templates/binning_done.html
@@ -20,7 +20,8 @@ show('berg')
 <!-- Beginning of binning -->
 
 <h2>Binning done</h2>
-<p>Time elapsed: {{ duration }} seconds</p>
+<p>Download duration: {{ dl_duration }} seconds</p>
+<p>Binning duration: {{ duration }} seconds</p>
 
 <div>
   <button class="w3-btn w3-green" onclick="show('berg')">Berg</button>
