Add w3css to html templates

--- a/app/rnames_app/templates/binning_scheme_list.html
+++ b/app/rnames_app/templates/binning_scheme_list.html
@@ -15,8 +15,8 @@
     {% endif %}
 
     {% if page_obj %}
-      <table style="width:100%">
-        <tr>
+    <table class="w3-table-all">
+      <tr>
           <th>Binning scheme</th>
           <th>Name</th>
           <th>Oldest</th>
