--- a/app/rnames_app/templates/location_list.html
+++ b/app/rnames_app/templates/location_list.html
@@ -17,8 +17,8 @@
     {% endif %}
 
     {% if page_obj %}
-      <table style="width:100%">
-        <tr>
+    <table class="w3-table-all">
+      <tr>
           <th>Location</th>
           {% if user.is_authenticated %}
           <th>Action</th>
