--- a/app/rnames_app/templates/name_list.html
+++ b/app/rnames_app/templates/name_list.html
@@ -16,8 +16,8 @@
     {% endif %}
 
     {% if page_obj %}
-      <table style="width:100%">
-        <tr>
+    <table class="w3-table-all">
+      <tr>
           <th>Name</th>
           {% if user.is_authenticated %}
           <th>Action</th>
