--- a/app/rnames_app/templates/qualifier_list.html
+++ b/app/rnames_app/templates/qualifier_list.html
@@ -16,8 +16,8 @@
   {% endif %}
 
   {% if page_obj %}
-    <table style="width:100%">
-      <tr>
+  <table class="w3-table-all">
+    <tr>
         <th>Qualifier Name</th>
         <th>Stratigraphic Qualifier</th>
         <th>Level</th>
