--- a/app/rnames_app/templates/relation_list.html
+++ b/app/rnames_app/templates/relation_list.html
@@ -11,8 +11,8 @@
   </form>
 
   {% if page_obj %}
-    <table class="w3-row">
-      <tr>
+  <table class="w3-table-all">
+    <tr>
         <th>Name 1</th>
         <th>Name 2</th>
         <th>Belongs to</th>
