--- a/app/rnames_app/templates/reference_list.html
+++ b/app/rnames_app/templates/reference_list.html
@@ -16,8 +16,8 @@
     {% endif %}
 
     {% if page_obj %}
-      <table style="width:100%">
-        <tr>
+    <table class="w3-table-all">
+      <tr>
           <th>First Author</th>
           <th>Year</th>
           <th>Title</th>
