--- a/app/rnames_app/templates/stratigraphic_qualifier_list.html
+++ b/app/rnames_app/templates/stratigraphic_qualifier_list.html
@@ -16,8 +16,8 @@
   {% endif %}
 
   {% if page_obj %}
-    <table style="width:100%">
-      <tr>
+  <table class="w3-table-all">
+    <tr>
         <th>Stratigraphic Qualifier Name</th>
         {% if user.is_authenticated %}
         <th>Action</th>
