--- a/app/rnames_app/templates/binning_scheme_list.html
+++ b/app/rnames_app/templates/binning_scheme_list.html
@@ -32,7 +32,7 @@
             <td>{{ x.oldest }}</td>
             <td>{{ x.youngest }}</td>
             <td>{{ x.ts_count }}</td>
-            <td><a class="btn btn-default" href="{% url 'structuredname-list' %}?name__name={{ x.name }}"><span class="fa fa-search"></span></a></td>
+            <td><a href="{% url 'structuredname-list' %}?name__name={{ x.name }}"><span class="fa fa-search"></span></a></td>
           </tr>
         {% endfor %}
       </table>
