--- a/app/rnames_app/templates/location_edit.html
+++ b/app/rnames_app/templates/location_edit.html
@@ -7,10 +7,10 @@
     {% if user.is_authenticated %}
       <h2>Edit Location</h2>
       <form method="POST" class="location-form">{% csrf_token %}
-          {{ form.as_p }}
-          <button type="submit" class="save btn btn-default">Save</button>
+        {{ form.as_p }}
+        <a href="{{request.META.HTTP_REFERER}}" class="w3-button w3-border w3-light-grey" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</a>
+        <button type="submit" class="w3-button w3-border w3-light-grey" style="width:120px">Submit &nbsp; <i class="fas fa-angle-right"></i></button>      
       </form>
-      <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
     {% else %}
       <p><a href="{% url 'account_login'%}?next={{request.path}}">Please login first</a></p>
     {% endif %}
