--- a/app/rnames_app/templates/location_list.html
+++ b/app/rnames_app/templates/location_list.html
@@ -12,7 +12,7 @@
     </form>
     {% if user.is_authenticated %}
       <br>
-      <a class="btn btn-default" href="{% url 'location-new' %}"><span class="fa  fa-plus"></span> Add</a>
+      <a href="{% url 'location-new' %}"><span class="fa  fa-plus"></span> Add</a>
       <br>
     {% endif %}
 
@@ -31,9 +31,9 @@
             {% if user.is_authenticated %}
               <td><a href="{{ x.get_absolute_url }}">{{ x.name }}</td>
               <td>
-                <a class="btn btn-default" href="{% url 'location-detail' pk=x.pk %}"><span class="fa fa-search"></span></a>
-                <a class="btn btn-default" href="{% url 'location-edit' pk=x.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-                <a class="btn btn-default" href="{% url 'location-delete' pk=x.pk %}"><span class="fa  fa-trash-o"></span></a>
+                <a href="{% url 'location-detail' pk=x.pk %}"><span class="fa fa-search"></span></a>
+                <a href="{% url 'location-edit' pk=x.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+                <a href="{% url 'location-delete' pk=x.pk %}"><span class="fa  fa-trash-o"></span></a>
               </td>
 
             {% else %}
