--- a/app/rnames_app/templates/name_detail.html
+++ b/app/rnames_app/templates/name_detail.html
@@ -6,8 +6,8 @@
 <article>
     <div class="name">
         {% if user.is_authenticated %}
-          <a class="btn btn-default" href="{% url 'name-edit' pk=name.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-          <a class="btn btn-default" href="{% url 'name-delete' pk=name.pk %}"><span class="fa  fa-trash-o"></span></a>
+          <a href="{% url 'name-edit' pk=name.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+          <a href="{% url 'name-delete' pk=name.pk %}"><span class="fa  fa-trash-o"></span></a>
         {% endif %}
         <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
         <header class="w3-hide">
@@ -41,9 +41,9 @@
                 <td></td>
               {% endif %}
               <td>
-                <a class="btn btn-default" href="{% url 'structuredname-detail' pk=sn.pk %}"><span class="fa fa-search"></span></a>
-                <a class="btn btn-default" href="{% url 'structuredname-edit' pk=sn.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-                <a class="btn btn-default" href="{% url 'structuredname-delete' pk=sn.pk %}"><span class="fa  fa-trash-o"></span></a>
+                <a href="{% url 'structuredname-detail' pk=sn.pk %}"><span class="fa fa-search"></span></a>
+                <a href="{% url 'structuredname-edit' pk=sn.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+                <a href="{% url 'structuredname-delete' pk=sn.pk %}"><span class="fa  fa-trash-o"></span></a>
               </td>
             </tr>
           {% endfor %}
@@ -71,9 +71,9 @@
                  <td></td>
                {% endif %}
                <td>
-                 <a class="btn btn-default" href="{% url 'relation-detail' pk=relation.pk %}"><span class="fa fa-search"></span></a>
-                 <a class="btn btn-default" href="{% url 'relation-edit' pk=relation.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-                 <a class="btn btn-default" href="{% url 'relation-delete' pk=relation.pk %}"><span class="fa  fa-trash-o"></span></a>
+                 <a href="{% url 'relation-detail' pk=relation.pk %}"><span class="fa fa-search"></span></a>
+                 <a href="{% url 'relation-edit' pk=relation.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+                 <a href="{% url 'relation-delete' pk=relation.pk %}"><span class="fa  fa-trash-o"></span></a>
                </td>
              </tr>
             {% endfor %}
