--- a/app/rnames_app/templates/qualifier_list.html
+++ b/app/rnames_app/templates/qualifier_list.html
@@ -11,7 +11,7 @@
   </form>
   {% if user.is_authenticated %}
     <br>
-    <a class="btn btn-default" href="{% url 'qualifier-new' %}"><span class="fa  fa-plus"></span> Add</a>
+    <a href="{% url 'qualifier-new' %}"><span class="fa  fa-plus"></span> Add</a>
     <br>
   {% endif %}
 
@@ -34,9 +34,9 @@
             <td>{{ x.stratigraphic_qualifier }}</td>
             <td>{{ x.level }}</td>
             <td>
-              <a class="btn btn-default" href="{% url 'qualifier-detail' pk=x.pk %}"><span class="fa fa-search"></span></a>
-              <a class="btn btn-default" href="{% url 'qualifier-edit' pk=x.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-              <a class="btn btn-default" href="{% url 'qualifier-delete' pk=x.pk %}"><span class="fa  fa-trash-o"></span></a>
+              <a href="{% url 'qualifier-detail' pk=x.pk %}"><span class="fa fa-search"></span></a>
+              <a href="{% url 'qualifier-edit' pk=x.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+              <a href="{% url 'qualifier-delete' pk=x.pk %}"><span class="fa  fa-trash-o"></span></a>
             </td>
 
           {% else %}
