--- a/app/rnames_app/templates/reference_detail.html
+++ b/app/rnames_app/templates/reference_detail.html
@@ -7,8 +7,8 @@
 <!-- Write your comments here -->
 <section class="w3-section">
   {% if user.is_authenticated %}
-    <a class="btn btn-default" href="{% url 'reference-edit' pk=reference.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-    <a class="btn btn-default" href="{% url 'reference-delete' pk=reference.pk %}"><span class="fa  fa-trash-o"></span></a>
+    <a href="{% url 'reference-edit' pk=reference.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+    <a href="{% url 'reference-delete' pk=reference.pk %}"><span class="fa  fa-trash-o"></span></a>
   {% endif %}
   <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
   <table class="w3-table-all">
@@ -40,7 +40,7 @@
   </table>
   {% if user.is_authenticated %}
     <br>
-    <a class="btn btn-default" href="{% url 'reference-structured_name-new' reference.id%}"><span class="fa  fa-plus"></span> Add Structured Name</a>
+    <a href="{% url 'reference-structured_name-new' reference.id%}"><span class="fa  fa-plus"></span> Add Structured Name</a>
     <br>
     {% if sn_list %}
       <table class="w3-table-all">
@@ -60,7 +60,7 @@
             <td>{{ sn.name_one__location__name }}</td>
             {% if user.is_authenticated %}
               <td>
-                <a class="btn btn-default" href="{% url 'reference-relation-new' name_one=sn.name_one__id reference=reference.id %}"><span class="fa fa-search"></span></a>
+                <a href="{% url 'reference-relation-new' name_one=sn.name_one__id reference=reference.id %}"><span class="fa fa-search"></span></a>
               </td>
             {% endif %}
           </tr>
@@ -93,10 +93,10 @@
       <td>{{ x.name_two }}</td>
       <td>{{ x.belongs_to }}</td>
       <td>
-        <a class="btn btn-default" href="{% url 'relation_sql-detail' name_one=x.name_one.id name_two=x.name_two.id %}"><span class="fa fa-search"></span></a>
+        <a href="{% url 'relation_sql-detail' name_one=x.name_one.id name_two=x.name_two.id %}"><span class="fa fa-search"></span></a>
         {% if user.is_authenticated %}
-        <a class="btn btn-default" href="{% url 'relation-edit' pk=x.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-        <a class="btn btn-default" href="{% url 'reference-relation-delete' pk=x.pk %}"><span class="fa  fa-trash-o"></span></a>
+        <a href="{% url 'relation-edit' pk=x.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+        <a href="{% url 'reference-relation-delete' pk=x.pk %}"><span class="fa  fa-trash-o"></span></a>
         {% endif %}
       </td>
     </tr>
