--- a/app/rnames_app/templates/reference_edit.html
+++ b/app/rnames_app/templates/reference_edit.html
@@ -9,7 +9,8 @@
         <table class="w3-table-all">
           {{ form.as_table }}
         </table>
-          <button type="submit" class="save btn btn-default">Save</button>
+        <a href="{{request.META.HTTP_REFERER}}" class="w3-button w3-border w3-light-grey" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</a>
+        <button type="submit" class="w3-button w3-border w3-light-grey" style="width:120px">Submit &nbsp; <i class="fas fa-angle-right"></i></button>      
       </form>
   </article>
 {% endblock %}
