--- a/app/rnames_app/templates/relation_detail.html
+++ b/app/rnames_app/templates/relation_detail.html
@@ -6,8 +6,8 @@
 <article>
     <div class="relation">
         {% if user.is_authenticated %}
-          <a class="btn btn-default" href="{% url 'relation-edit' pk=relation.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-          <a class="btn btn-default" href="{% url 'relation-delete' pk=relation.pk %}"><span class="fa  fa-trash-o"></span></a>
+          <a href="{% url 'relation-edit' pk=relation.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+          <a href="{% url 'relation-delete' pk=relation.pk %}"><span class="fa  fa-trash-o"></span></a>
         {% endif %}
         <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
         <header class="w3-hide">
