--- a/app/rnames_app/templates/relation_sql_detail.html
+++ b/app/rnames_app/templates/relation_sql_detail.html
@@ -6,8 +6,8 @@
 <article>
     <div class="relation">
         {% if user.is_authenticated %}
-          <a class="btn btn-default" href="{% url 'relation-edit' pk=relation.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-          <a class="btn btn-default" href="{% url 'relation-delete' pk=relation.pk %}"><span class="fa  fa-trash-o"></span></a>
+          <a href="{% url 'relation-edit' pk=relation.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+          <a href="{% url 'relation-delete' pk=relation.pk %}"><span class="fa  fa-trash-o"></span></a>
         {% endif %}
         <p><button onClick="javascript:history.back();">Go back</button></p>
         <header class="w3-hide">
@@ -51,10 +51,10 @@
             <td>{{ x.title|truncatechars:70 }}</td>
             <td><a href="{{ x.link }}" target="_blank">{{ x.link|truncatechars_html:20 }}</a></td>
             <td>
-              <a class="btn btn-default" href="{% url 'reference-detail' pk=x.id %}"><span class="fa fa-search"></span></a>
+              <a href="{% url 'reference-detail' pk=x.id %}"><span class="fa fa-search"></span></a>
               {% if user.is_authenticated %}
-                <a class="btn btn-default" href="{% url 'reference-edit' pk=x.id %}"><span class="fa fa-pencil-square-o"></span></a>
-                <a class="btn btn-default" href="{% url 'reference-delete' pk=x.id %}"><span class="fa  fa-trash-o"></span></a>
+                <a href="{% url 'reference-edit' pk=x.id %}"><span class="fa fa-pencil-square-o"></span></a>
+                <a href="{% url 'reference-delete' pk=x.id %}"><span class="fa  fa-trash-o"></span></a>
               {% endif %}
             </td>
           </tr>
