--- a/app/rnames_app/templates/stratigraphic_qualifier_detail.html
+++ b/app/rnames_app/templates/stratigraphic_qualifier_detail.html
@@ -6,8 +6,8 @@
 <article>
     <div class="qualifier">
         {% if user.is_authenticated %}
-          <a class="btn btn-default" href="{% url 'stratigraphic-qualifier-edit' pk=stratigraphicqualifier.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-          <a class="btn btn-default" href="{% url 'stratigraphic-qualifier-delete' pk=stratigraphicqualifier.pk %}"><span class="fa  fa-trash-o"></span></a>
+          <a href="{% url 'stratigraphic-qualifier-edit' pk=stratigraphicqualifier.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+          <a href="{% url 'stratigraphic-qualifier-delete' pk=stratigraphicqualifier.pk %}"><span class="fa  fa-trash-o"></span></a>
         {% endif %}
         <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
         <header class="w3-hide">
