--- a/app/rnames_app/templates/stratigraphic_qualifier_edit.html
+++ b/app/rnames_app/templates/stratigraphic_qualifier_edit.html
@@ -8,9 +8,9 @@
       <h2>Edit Stratigraphic Qualifier</h2>
       <form method="POST" class="stratigraphicqualifier-form">{% csrf_token %}
           {{ form.as_p }}
-          <button type="submit" class="save btn btn-default">Save</button>
-      </form>
-      <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
+          <a href="{{request.META.HTTP_REFERER}}" class="w3-button w3-border w3-light-grey" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</a>
+          <button type="submit" class="w3-button w3-border w3-light-grey" style="width:120px">Submit &nbsp; <i class="fas fa-angle-right"></i></button>      
+        </form>
     {% else %}
       <p><a href="{% url 'account_login'%}?next={{request.path}}">Please login first</a></p>
     {% endif %}
