--- a/app/rnames_app/templates/stratigraphic_qualifier_list.html
+++ b/app/rnames_app/templates/stratigraphic_qualifier_list.html
@@ -11,7 +11,7 @@
   </form>
   {% if user.is_authenticated %}
     <br>
-    <a class="btn btn-default" href="{% url 'stratigraphic-qualifier-new' %}"><span class="fa  fa-plus"></span> Add</a>
+    <a href="{% url 'stratigraphic-qualifier-new' %}"><span class="fa  fa-plus"></span> Add</a>
     <br>
   {% endif %}
 
@@ -30,9 +30,9 @@
           {% if user.is_authenticated %}
             <td>{{ x.name }}</td>
             <td>
-              <a class="btn btn-default" href="{% url 'stratigraphic-qualifier-detail' pk=x.pk %}"><span class="fa fa-search"></span></a>
-              <a class="btn btn-default" href="{% url 'stratigraphic-qualifier-edit' pk=x.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-              <a class="btn btn-default" href="{% url 'stratigraphic-qualifier-delete' pk=x.pk %}"><span class="fa  fa-trash-o"></span></a>
+              <a href="{% url 'stratigraphic-qualifier-detail' pk=x.pk %}"><span class="fa fa-search"></span></a>
+              <a href="{% url 'stratigraphic-qualifier-edit' pk=x.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+              <a href="{% url 'stratigraphic-qualifier-delete' pk=x.pk %}"><span class="fa  fa-trash-o"></span></a>
             </td>
 
           {% else %}
