Wait for DOM to finish loading before altering it

--- a/app/rnames_app/templates/binning_done.html
+++ b/app/rnames_app/templates/binning_done.html
@@ -14,7 +14,7 @@ const show = ty => {
   })
 }
 
-show('berg')
+window.addEventListener('DOMContentLoaded', () => show('berg'));
 </script>
 
 <!-- Beginning of binning -->
