Update table w3css

--- a/app/rnames_app/templates/reference_relation_edit.html
+++ b/app/rnames_app/templates/reference_relation_edit.html
@@ -60,7 +60,7 @@
   <header>
       <h5>{{ name_one }} has the following relations</h5>
    </header>
-  <table class="w3-row">
+  <table class="w3-table-all">
     <tr>
       <th>Structured Name</th>
       <th>Belongs to</th>
