Display database update duration on binnign result page

--- a/app/rnames_app/templates/binning_done.html
+++ b/app/rnames_app/templates/binning_done.html
@@ -21,6 +21,7 @@ window.addEventListener('DOMContentLoaded', () => show('berg'));
 
 <h2>Binning done</h2>
 <p>Binning duration: {{ duration }} seconds</p>
+<p>Database update duration: {{ update_duration }} seconds</p>
 
 <div>
   <button class="w3-btn w3-green" onclick="show('berg')">Berg</button>
