Show individual tables on binning results page

--- a/app/rnames_app/templates/binning_done.html
+++ b/app/rnames_app/templates/binning_done.html
@@ -41,12 +41,12 @@ window.addEventListener('DOMContentLoaded', () => show('berg'));
 </div> 
 
 <div id ="stages">
-  <h2>Binned Stages</h2>
+  <h2>Stages</h2>
   <div> {{ stages | safe }} </div> 
 </div> 
 
 <div id ="periods">
-  <h2>Binned Periods</h2>
+  <h2>Periods</h2>
   <div> {{ periods | safe }} </div> 
 </div> 
 
