--- a/app/frontend/templates/frontend/index.html
+++ b/app/frontend/templates/frontend/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base_generic.html' %}
+{% block title %}RNames - Wizard{% endblock %}
+
+{% block content %}
 <head>
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wizard</title>
     {{ names|json_script:"DATA_NAMES" }}
     {{ locations|json_script:"DATA_LOCATIONS" }}
@@ -18,4 +18,4 @@
     <div id="app"></div>
     <script src="{% static 'frontend/main.js' %}"></script>
 </body>
-</html>
+{% endblock %}
