Fix link to wizard

--- a/app/rnames_app/templates/base_generic.html
+++ b/app/rnames_app/templates/base_generic.html
@@ -157,7 +157,7 @@
           <li><a href="{% url 'stratigraphic-qualifier-list' %}">Stratigraphic Qualifiers</a></li>
           <li><a href="{% url 'timeslice-list' %}">Time Slices</a></li>
           <li><a href="{% url 'run-binning' %}">Run binning</a></li>
-          <li><a href="{% url 'wizard' %}">Wizard</a></li>
+          <li><a href="{% url 'wizard_home' %}">Wizard</a></li>
         </ul>
         <hr>
         <strong>User: {{ user.get_username }}</strong>
