--- a/app/rnames_app/templates/help_instruction.html
+++ b/app/rnames_app/templates/help_instruction.html
@@ -5,8 +5,8 @@
 <!-- Beginning of RNames help Database Structure-->
 <article>
    <div class="help">
-      <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
-      <header class="w3-hide">
+    <p><button class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
+    <header class="w3-hide">
          <h2>RNames - Help - Instructions</h2>
       </header>
       <h2>Stepwise Data Entry</h2>
