--- a/app/rnames_app/templates/timeslice_list.html
+++ b/app/rnames_app/templates/timeslice_list.html
@@ -17,7 +17,7 @@
     {% endif %}
 
     {% if page_obj %}
-      <table style="w3-table">
+      <table class="w3-table-all">
         <tr>
           <th>Scheme</th>
           <th>Order</th>
