Add different style to notifications that are not errors

--- a/app/frontend/src/components/notification.css
+++ b/app/frontend/src/components/notification.css
@@ -1,4 +1,9 @@
 .error {
     color: red;
-    background: lightgrey;
+    background: lightgray;
 } 
+
+.information {
+    color: darkgoldenrod;
+    background: lightgray;
+}
