--- a/app/rnames_app/templates/help.html
+++ b/app/rnames_app/templates/help.html
@@ -14,6 +14,7 @@
           <tr><td><a href="{% url 'help-faq' %}">FAQ</a></td></th></tr>
           <tr><td><a href="{% url 'help-database-structure' %}">Database Structure</a></th></tr>
           {% if user.is_authenticated %}
+            <tr><td><a href="{% url 'help-wizard' %}">Data entry with Wizard</a></th></tr>
             <tr><td><a href="{% url 'help-instruction' %}">Data entry in Three Steps</a></th></tr>
           {% endif %}
           <tr><td><a href="{% url 'help-structure-of-binning-algorithm' %}">Binning algorithm</a></th></tr>
