--- a/app/rnames_app/templates/help_instruction.html
+++ b/app/rnames_app/templates/help_instruction.html
@@ -5,7 +5,7 @@
 <!-- Beginning of RNames help Database Structure-->
 <article>
    <div class="help">
-    <p><button class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
+    <p><button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
     <header class="w3-hide">
          <h2>RNames - Help - Instructions</h2>
       </header>
