--- a/app/rnames_app/templates/location_detail.html
+++ b/app/rnames_app/templates/location_detail.html
@@ -9,7 +9,7 @@
           <a href="{% url 'location-edit' pk=location.pk %}"><span class="fa fa-pencil-square-o"></span></a>
           <a href="{% url 'location-delete' pk=location.pk %}"><span class="fa  fa-trash-o"></span></a>
         {% endif %}
-        <p><button class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
+        <p><button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
         <header class="w3-hide">
             <h2>RNames - Location: {{ location.id }}</h2>
          </header>
