--- a/app/rnames_app/templates/structuredname_detail.html
+++ b/app/rnames_app/templates/structuredname_detail.html
@@ -10,7 +10,7 @@
   <a href="{% url 'structuredname-edit' pk=structuredname.pk %}"><span class="fa fa-pencil-square-o"></span></a>
   <a href="{% url 'structuredname-delete' pk=structuredname.pk %}"><span class="fa  fa-trash-o"></span></a>
   {% endif %}
-  <p><button class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
+  <p><button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
   <header style="display:none;">
     <h2>RNames - Structured Name: {{ structuredname.id }}</h2>
   </header>
