--- a/app/rnames_app/templates/rnames_app/reference_relation_confirm_delete.html
+++ b/app/rnames_app/templates/rnames_app/reference_relation_confirm_delete.html
@@ -11,7 +11,7 @@
     {% csrf_token %}
     <input type="submit" action="" value="Yes, delete." />
   </form>
-  <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
+  <p><button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
 {% else %}
   <p><a href="{% url 'account_login'%}?next={{request.path}}">Please login first</a></p>
 {% endif %}
