Display error message on binning result page if one occurs

--- a/app/rnames_app/templates/binning_done.html
+++ b/app/rnames_app/templates/binning_done.html
@@ -4,9 +4,15 @@
 {% block content %}
 <!-- Beginning of binning -->
 
+{% if error %}
+<h2>Error</h2>
+<p>{{ error_message }}</p>
+{% else %}
 <h2>Binning done</h2>
 <p>Binning duration: {{ duration }} seconds</p>
 <p>Database update duration: {{ update_duration }} seconds</p>
+
+{% endif %}
 
 <!-- End of binning -->
 
