--- a/app/rnames_app/templates/run_binning.html
+++ b/app/rnames_app/templates/run_binning.html
@@ -34,6 +34,7 @@ window.addEventListener('DOMContentLoaded', () => {
 
   const updateProgressLabel = document.getElementById('updateProgressLabel')
   const updateProgressBar = document.getElementById('updateProgressBar')
+  const updateProgressBarContainer = document.getElementById('updateProgressBarContainer')
 
   document.getElementById('binningForm').addEventListener('submit', () => {
     binningProgressBarContainer.classList.remove('w3-hide')
@@ -46,6 +47,11 @@ window.addEventListener('DOMContentLoaded', () => {
       .then(v => v.json())
       .then(v => {
         binningProgressBar.style.width = `${Math.min(100 * v.binning[0] / v.binning[1], 100)}%`
+        if (v.binning[0] == v.binning[1]) {
+          updateProgressLabel.classList.remove('w3-hide')
+          updateProgressBarContainer.classList.remove('w3-hide')
+          updateProgressBar.style.width = `${Math.min(100 * v.update[0] / v.update[1], 100)}%`
+        }
       })
   }, 5000)
   })
