Do not use self-closing divs

--- a/app/rnames_app/templates/run_binning.html
+++ b/app/rnames_app/templates/run_binning.html
@@ -10,12 +10,14 @@
   <p id="binningProgressLabel" class="w3-hide">Binning progress:</p>
 
   <div id="binningProgressBarContainer" class="w3-light-grey w3-hide">
-    <div id="binningProgressBar" class="w3-container w3-green" style="height:24px; width:0%" />
+    <div id="binningProgressBar" class="w3-container w3-green" style="height:24px; width:0%">
+    </div>
   </div>
 
   <p id="updateProgressLabel" class="w3-hide">Database update progress:</p>
   <div id="updateProgressBarContainer" class="w3-light-grey w3-hide">
-    <div id="updateProgressBar" class="w3-container w3-green" style="height:24px; width:0%" />
+    <div id="updateProgressBar" class="w3-container w3-green" style="height:24px; width:0%">
+    </div>
   </div>
 
   <form id='binningForm' action="/rnames/admin/binning_done" method="post">
