--- a/app/rnames_app/templates/help_faq.html
+++ b/app/rnames_app/templates/help_faq.html
@@ -1,49 +1,11 @@
 {% extends 'base_generic.html' %}
-{% block style %}
-.collapsible {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-}
-
-.active, .collapsible:hover {
-  background-color: #ccc;
-}
-
-.collapsible:after {
-  content: '\002B';
-  color: #777;
-  font-weight: bold;
-  float: right;
-  margin-left: 5px;
-}
-
-.active:after {
-  content: "\2212";
-}
-
-.content {
-  padding: 0 18px;
-  background-color: white;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-}
-{% endblock %}
 {% block title %}RNames - Help - FAQ{% endblock %}
 
 {% block content %}
 
 <!-- Beginning of RNames - Help - FAQ-->
 <article>
-    <div class="help">
+    <div class="help faq">
       <p><button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
         <header class="w3-hide">
             <h2>RNames - Help - FAQ</h2>
