--- a/app/frontend/src/index.css
+++ b/app/frontend/src/index.css
@@ -12,12 +12,13 @@ code {
     monospace;
 }
 
-div {
+.frontend-div {
   margin:  6px;
   padding: 6px;
   border:  1px solid lightgrey;
 }
 
+.w3-container { padding: 0px !important; }
 
 #relation-selector {
   display: flex;
