Fix sidebar and dropdown menus

--- a/app/rnames_app/templates/base_generic.html
+++ b/app/rnames_app/templates/base_generic.html
@@ -69,8 +69,8 @@
   }
 
   .w3-bar-block .w3-bar-item {
-    padding: 3px 16px;
-    margin: 0px;
+    margin: 0px !important;
+    font-family: Arial, Helvetica, sans-serif !important;
   }
 
   .list .w3-button:hover {
@@ -95,7 +95,8 @@
   }
 
   .navigation .w3-bar-item {
-    padding-left: 40px;
+    padding: 3px 16px !important;
+    padding-left: 40px !important;
   }
 
 
